Store avatar tokens to use them when contact is offline

Workarounds a Tp bug/feature that returns an empty avatarToken for
offline users, so we can't display proper avatars for offline contacts
when (any) contact list is started.

REVIEW: 109432
BUG: 315939
FIXED-IN: 0.6.0